<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray"
        android:orientation="vertical"
        android:padding="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/number1"
                style="@style/NumberInPasscode"
                android:layout_margin="@dimen/_2dp"
                android:layout_weight="1"
                android:background="@drawable/bg_number_passcode"
                android:text="@string/_1" />

            <TextView
                android:id="@+id/number2"
                style="@style/NumberInPasscode"
                android:layout_margin="@dimen/_2dp"
                android:layout_weight="1"
                android:background="@drawable/bg_number_passcode"
                android:text="@string/_2" />

            <TextView
                android:id="@+id/number3"
                style="@style/NumberInPasscode"
                android:layout_margin="@dimen/_2dp"
                android:layout_weight="1"
                android:background="@drawable/bg_number_passcode"
                android:text="@string/_3" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/number4"
                style="@style/NumberInPasscode"
                android:layout_margin="@dimen/_2dp"
                android:layout_weight="1"
                android:background="@drawable/bg_number_passcode"
                android:text="@string/_4" />

            <TextView
                android:id="@+id/number5"
                style="@style/NumberInPasscode"
                android:layout_margin="@dimen/_2dp"
                android:layout_weight="1"
                android:background="@drawable/bg_number_passcode"
                android:text="@string/_5" />

            <TextView
                android:id="@+id/number6"
                style="@style/NumberInPasscode"
                android:layout_margin="@dimen/_2dp"
                android:layout_weight="1"
                android:background="@drawable/bg_number_passcode"
                android:text="@string/_6" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/number7"
                style="@style/NumberInPasscode"
                android:layout_margin="@dimen/_2dp"
                android:layout_weight="1"
                android:background="@drawable/bg_number_passcode"
                android:text="@string/_7" />

            <TextView
                android:id="@+id/number8"
                style="@style/NumberInPasscode"
                android:layout_margin="@dimen/_2dp"
                android:layout_weight="1"
                android:background="@drawable/bg_number_passcode"
                android:text="@string/_8" />

            <TextView
                android:id="@+id/number9"
                style="@style/NumberInPasscode"
                android:layout_margin="@dimen/_2dp"
                android:layout_weight="1"
                android:background="@drawable/bg_number_passcode"
                android:text="@string/_9" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/numberB"
                style="@style/NumberInPasscode"
                android:layout_margin="@dimen/_2dp"
                android:layout_weight="1"
                android:scaleType="centerInside" />

            <TextView
                android:id="@+id/number0"
                style="@style/NumberInPasscode"
                android:layout_margin="@dimen/_2dp"
                android:layout_weight="1"
                android:background="@drawable/bg_number_passcode"
                android:text="@string/_0" />

            <ImageView
                android:id="@+id/backspace"
                style="@style/NumberInPasscode"
                android:layout_margin="@dimen/_2dp"
                android:layout_weight="1"
                android:scaleType="centerInside"
                android:src="@drawable/ic_backspace" />
        </LinearLayout>
    </LinearLayout>
</layout>