<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:padding="16dp">

        <com.google.android.material.bottomsheet.BottomSheetDragHandleView
            android:id="@+id/bottom_sheet_drag_handle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Date Range Filter -->
        <TextView
            android:id="@+id/date_range_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginBottom="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bottom_sheet_drag_handle"/>

        <!-- Start Date -->
        <EditText
            android:id="@+id/start_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_8dp"
            android:padding="@dimen/_8dp"
            android:hint="@string/start_date"
            android:focusable="false"
            android:background="@drawable/custom_edit"
            android:clickable="true"
            android:drawableEnd="@drawable/ic_edit_calendar_24"
            android:importantForAutofill="no"
            android:inputType="date"
            app:layout_constraintEnd_toStartOf="@+id/end_date"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/date_range_label" />

        <!-- End Date -->
        <EditText
            android:id="@+id/end_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_8dp"
            android:hint="@string/end_date"
            android:focusable="false"
            android:background="@drawable/custom_edit"
            android:padding="@dimen/_8dp"
            android:clickable="true"
            android:inputType="date"
            android:drawableEnd="@drawable/ic_edit_calendar_24"
            android:importantForAutofill="no"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/start_date"
            app:layout_constraintTop_toBottomOf="@+id/date_range_label"
            android:layout_marginStart="8dp" />

        <!-- Wallet Filter -->
        <TextView
            android:id="@+id/wallet_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wallet"
            android:textStyle="bold"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/start_date"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp" />

        <TextView
            android:id="@+id/filter_wallet"
            android:layout_width="0dp"
            android:layout_marginTop="@dimen/_8dp"
            android:padding="@dimen/_8dp"
            android:background="@drawable/custom_edit"
            android:layout_height="wrap_content"
            android:hint="@string/select_wallet"
            android:entries="@array/wallet_options"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/wallet_label" />

        <!-- Category Filter -->
        <TextView
            android:id="@+id/category_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:textStyle="bold"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/filter_wallet"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp" />

        <TextView
            android:id="@+id/filter_category"
            android:layout_marginTop="@dimen/_8dp"
            android:layout_width="0dp"
            android:padding="@dimen/_8dp"
            android:hint="@string/select_category"
            android:background="@drawable/custom_edit"
            android:layout_height="wrap_content"
            android:entries="@array/category_options"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/category_label" />

        <!-- Description Filter -->
        <TextView
            android:id="@+id/description_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textStyle="bold"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/filter_category"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp" />

        <EditText
            android:id="@+id/filter_description"
            android:layout_marginTop="@dimen/_8dp"
            android:background="@drawable/custom_edit"
            android:padding="@dimen/_8dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_description"
            android:importantForAutofill="no"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description_label" />

        <!-- Amount Range Filter -->
        <TextView
            android:id="@+id/amount_range_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amount"
            android:textStyle="bold"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/filter_description"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp" />

        <!-- Min Amount -->
        <EditText
            android:id="@+id/min_amount"
            android:layout_width="0dp"
            android:layout_marginTop="@dimen/_8dp"
            android:padding="@dimen/_8dp"
            android:background="@drawable/custom_edit"
            android:layout_height="wrap_content"
            android:hint="@string/min_amount"
            android:inputType="numberDecimal"
            android:importantForAutofill="no"
            app:layout_constraintEnd_toStartOf="@+id/max_amount"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/amount_range_label" />

        <!-- Max Amount -->
        <EditText
            android:id="@+id/max_amount"
            android:layout_width="0dp"
            android:layout_marginTop="@dimen/_8dp"
            android:padding="@dimen/_8dp"
            android:background="@drawable/custom_edit"
            android:layout_height="wrap_content"
            android:hint="@string/max_amount"
            android:inputType="numberDecimal"
            android:importantForAutofill="no"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/min_amount"
            app:layout_constraintTop_toBottomOf="@+id/amount_range_label"
            android:layout_marginStart="8dp" />

        <!-- Apply and Cancel Buttons -->
        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/max_amount"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/cancel_filter_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="@dimen/_8dp"
                android:paddingBottom="@dimen/_8dp"
                android:paddingLeft="@dimen/_16dp"
                android:paddingRight="@dimen/_16dp"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:background="@drawable/background_cannel"
                android:textSize="16sp"
                android:layout_marginRight="@dimen/_4dp"
                android:text="@string/cancel" />

            <TextView
                android:layout_marginLeft="@dimen/_4dp"
                android:id="@+id/apply_filter_button"
                android:background="@drawable/background_save"
                android:textColor="@color/white"
                android:layout_width="0dp"
                android:gravity="center"
                android:paddingTop="@dimen/_8dp"
                android:paddingBottom="@dimen/_8dp"
                android:paddingLeft="@dimen/_16dp"
                android:paddingRight="@dimen/_16dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16sp"
                android:text="@string/apply" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>